quatrième refactoring javadoc